fix scrollbar issue on windows

--- a/static/home.css
+++ b/static/home.css
@@ -40,13 +40,12 @@ body {
     margin: 0;
     background-color: var(--bg-color);
     /* transition: background-color 0.5s; */
-    width: fit-content;
-    overflow: scroll;
+    width: 100%;
     -webkit-overflow-scrolling: touch;
 }
 
 #header {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     height: var(--header-height);
